Fixed sanity analysis
git-svn-id: svn://powhegbox.mib.infn.it/trunk/User-Processes-V2@2402 9e129b38-c2c0-4eec-9301-dc54fda404de

--- a/ZZ/Makefile
+++ b/ZZ/Makefile
@@ -150,7 +150,7 @@ PWHG=pwhg_main.o pwhg_init.o bbinit.o btilde.o lhefwrite.o		\
 pwhg_main:$(PWHG)
 	$(FF) $(patsubst %,$(OBJ)/%,$(PWHG)) $(LIBS) $(LIBSFASTJET) $(STATIC) -o $@
 
-LHEF=lhef_analysis.o boostrot.o random.o cernroutines.o		\
+LHEF=lhef_analysis.o boostrot.o random.o cernroutines.o	utils.o	\
      opencount.o powheginput.o $(PWHGANAL) 	\
      lhefread.o newunit.o pwhg_analysis_driver.o $(FPEOBJ)
 
