Fixed up sanity analysis
git-svn-id: svn://powhegbox.mib.infn.it/trunk/User-Processes-V2@2403 9e129b38-c2c0-4eec-9301-dc54fda404de

--- a/WZ/Makefile
+++ b/WZ/Makefile
@@ -8,7 +8,7 @@ PDF=lhapdf
 #Choose Analysis: none, default
 ## default analysis may require FASTJET package, that has to be installed separately (see below)
 #ANALYSIS=WZ
-ANALYSIS=dummy
+ANALYSIS=sanity
 ## For static linking uncomment the following
 STATIC= #-static
 #
@@ -86,7 +86,7 @@ FASTJET_CONFIG=$(shell which fastjet-config)
 #FASTJET_CONFIG=~/lib/fastjet242/bin/fastjet-config
 LIBSFASTJET += $(shell $(FASTJET_CONFIG) --libs --plugins ) -lstdc++
 FJCXXFLAGS+= $(shell $(FASTJET_CONFIG) --cxxflags)
-PWHGANAL=pwhg_bookhist-new.o pwhg_analysis-WZ.o fastjetfortran.o
+PWHGANAL=pwhg_bookhist-multi.o pwhg_analysis-WZ.o fastjetfortran.o
 ## Also add required Fastjet drivers to PWHGANAL (examples are reported)
 #PWHGANAL+= fastjetsisconewrap.o fastjetktwrap.o fastjetCDFMidPointwrap.o fastjetD0RunIIConewrap.o fastjetfortran.o
 endif
@@ -97,7 +97,7 @@ FASTJET_CONFIG=$(shell which fastjet-config)
 #FASTJET_CONFIG=~/lib/fastjet242/bin/fastjet-config
 LIBSFASTJET += $(shell $(FASTJET_CONFIG) --libs --plugins ) -lstdc++
 FJCXXFLAGS+= $(shell $(FASTJET_CONFIG) --cxxflags)
-PWHGANAL=pwhg_bookhist-new.o pwhg_analysis-sanity.o fastjetfortran.o
+PWHGANAL=pwhg_bookhist-multi.o pwhg_analysis-sanity.o fastjetfortran.o
 ## Also add required Fastjet drivers to PWHGANAL (examples are reported)
 #PWHGANAL+= fastjetsisconewrap.o fastjetktwrap.o fastjetCDFMidPointwrap.o fastjetD0RunIIConewrap.o fastjetfortran.o
 endif
@@ -137,7 +137,7 @@ PWHG=pwhg_main.o pwhg_init.o bbinit.o btilde.o lhefwrite.o		\
 pwhg_main:$(PWHG)
 	$(FF) $(patsubst %,$(OBJ)/%,$(PWHG)) $(LIBS) $(LIBSFASTJET) $(STATIC) -o $@
 
-LHEF=lhef_analysis.o boostrot.o random.o cernroutines.o		\
+LHEF=lhef_analysis.o boostrot.o random.o cernroutines.o utils.o \
      opencount.o powheginput.o $(PWHGANAL)	\
      lhefread.o newunit.o pwhg_analysis_driver.o $(FPEOBJ)
 
