--- a/WW/Makefile
+++ b/WW/Makefile
@@ -130,7 +130,8 @@ PWHG=pwhg_main.o pwhg_init.o bbinit.o btilde.o lhefwrite.o		\
 	pwhg_analysis_driver.o checkmomzero.o reshufflemoms.o \
 	setstrongcoupl.o integrator.o newunit.o mwarn.o sigsoftvirt.o	\
 	sigcollsoft.o sigvirtual.o  setlocalscales.o validflav.o mint_upb.o  \
-	pwhgreweight.o opencount.o ubprojections.o utils.o $(PDFPACK) $(USER) $(FPEOBJ)
+	pwhgreweight.o opencount.o ubprojections.o utils.o \
+	randomizeckm.o $(PDFPACK) $(USER) $(FPEOBJ)
 
 # target to generate LHEF output
 pwhg_main:$(PWHG)
