--- a/trijet/Makefile
+++ b/trijet/Makefile
@@ -1,6 +1,6 @@
 #-*- Makefile -*-
 ## Choose compiler: gfortran,ifort (g77 not supported, F90 constructs in use!)
-COMPILER=gfortran
+COMPILER=ifort
 FC=$(COMPILER)
 #CXX=g++
 ## Choose PDF: native,lhapdf
