importance sampling fixes
git-svn-id: svn://powhegbox.mib.infn.it/trunk/User-Processes-V2@2518 9e129b38-c2c0-4eec-9301-dc54fda404de

--- a/ZZ/Makefile
+++ b/ZZ/Makefile
@@ -24,9 +24,6 @@ F77=gfortran -fno-automatic
 OPT=-O2
 ## For debugging uncomment the following
 #DEBUG= -ggdb -pg
-ifdef DEBUG
-OPT=
-endif
 endif
 
 ifeq ("$(COMPILER)","ifort")
@@ -38,6 +35,10 @@ LIBS = -limf
 OPT = -O3 #-fast
 ## For debugging uncomment the following
 #DEBUG= -debug -g
+endif
+
+ifdef DEBUG
+OPT=-O0
 endif
 
 
