--- a/HW/Makefile
+++ b/HW/Makefile
@@ -1,6 +1,6 @@
 #-*- Makefile -*-
 ## Choose compiler: gfortran,ifort (g77 not supported, F90 constructs in use!)
-COMPILER=ifort
+COMPILER=gfortran
 FC=$(COMPILER)
 ## Choose PDF: native,lhapdf
 ## LHAPDF package has to be installed separately
@@ -40,7 +40,7 @@ F77 = ifort -save  -extend_source  -I$(OBJ)
 #FFLAGS =  -checkm
 ## For floating point exception trapping  uncomment the following 
 #FPE = -fpe0
-OPT = -O3 #-fast
+OPT = -O1 #-fast
 ## For debugging uncomment the following
 #DEBUG= -debug -g
 ifdef DEBUG
@@ -48,19 +48,18 @@ OPT=-O0
 endif
 endif
 
-PWD=$(shell pwd)
-WDNAME=$(shell basename $(PWD))
-VPATH= ./:../Version-pre2-1/progress:../Version-pre2-1/:../:$(OBJDIR)
-
-
 OBJ=obj-$(COMPILER)
 OBJDIR:=$(OBJ)
 
+
+PWD=$(shell pwd)
+WDNAME=$(shell basename $(PWD))
+VPATH= ./:../:$(OBJDIR):./GoSamlib/
+
 INCLUDE0=$(PWD)
 INCLUDE1=$(PWD)/include
-INCLUDE1.2=$(shell dirname $(PWD))/Version-pre2-1/include
 INCLUDE2=$(shell dirname $(PWD))/include
-FF=$(F77) $(FFLAGS) $(FPE) $(OPT) $(DEBUG) -I$(INCLUDE0) -I$(INCLUDE1) -I$(INCLUDE1.2) -I$(INCLUDE2)
+FF=$(F77) $(FFLAGS) $(FPE) $(OPT) $(DEBUG) -I$(INCLUDE0) -I$(INCLUDE1)  -I$(INCLUDE2)
 
 
 INCLUDE =$(wildcard ../include/*.h *.h include/*.h)
