--- a/Zj/Makefile
+++ b/Zj/Makefile
@@ -7,7 +7,7 @@ PDF=lhapdf
 ## ANALYSIS: none, default
 ## "default" analysis may require FASTJET package, that has to be 
 ##           installed separately (see below)
-ANALYSIS=default
+ANALYSIS=BnJ
 ## For static linking uncomment the following
 #STATIC=-static
 #
@@ -37,9 +37,8 @@ endif
 
 
 ifeq ("$(COMPILER)","ifort")
-F77 = ifort -save  -extend_source
-CXX = icpc
-LIBS = -limf
+F77 = ifort -extend_source
+OBJ=obj-ifort
 #FFLAGS =  -check
 ## For floating point exception trapping  uncomment the following 
 #FPE = -fpe0
@@ -49,9 +48,13 @@ OPT = -O3 #-fast
 endif
 
 
+OBJ=obj-$(COMPILER)
+
+
+
 PWD=$(shell pwd)
 WDNAME=$(shell basename $(PWD))
-VPATH= ./:../:obj/
+VPATH= ./:../:$(OBJ)/
 
 INCLUDE0=$(PWD)
 INCLUDE1=$(PWD)/include
@@ -93,14 +96,27 @@ PWHGANAL=pwhg_analysis.o pwhg_bookhist.o
 PWHGANAL+= fastjetsisconewrap.o fastjetktwrap.o fastjetCDFMidPointwrap.o fastjetD0RunIIConewrap.o 
 endif
 
+ifeq ("$(ANALYSIS)","BnJ")
+##To include Fastjet configuration uncomment the following lines. 
+FASTJET_CONFIG=$(shell which fastjet-config)
+LIBSFASTJET += $(shell $(FASTJET_CONFIG) --libs --plugins ) -lstdc++
+FJCXXFLAGS+= $(shell $(FASTJET_CONFIG) --cxxflags)
+PWHGANAL=pwhg_analysis-BnJ.o pwhg_bookhist-multi.o 
+## Also add required Fastjet drivers to PWHGANAL (examples are reported)
+PWHGANAL+= fastjetfortran.o
+endif
+
+
+
+
 %.o: %.f $(INCLUDE)
-	$(FF) -c -o obj/$@ $<
+	$(FF) -c -o $(OBJ)/$@ $<
 
 %.o: %.c
-	$(CC) $(DEBUG) -c -o obj/$@ $^ 
+	$(CC) $(DEBUG) -c -o $(OBJ)/$@ $^ 
 
 %.o: %.cc
-	$(CXX) $(DEBUG) -c -o obj/$@ $^ $(FJCXXFLAGS)
+	$(CXX) $(DEBUG) -c -o $(OBJ)/$@ $^ $(FJCXXFLAGS)
 
 USER=init_couplings.o init_processes.o Born_phsp.o Born.o virtual.o \
 		      real.o $(PWHGANAL)
@@ -115,43 +131,48 @@ PWHG=pwhg_main.o pwhg_init.o bbinit.o btilde.o lhefwrite.o		\
 	setstrongcoupl.o integrator.o newunit.o mwarn.o sigsoftvirt.o	\
 	reshufflemoms.o                                                 \
 	sigcollsoft.o sigvirtual.o setlocalscales.o validflav.o mint_upb.o  \
-	pwhgreweight.o opencount.o ubprojections.o \
+	pwhgreweight.o opencount.o ubprojections.o minlo_checks.o \
         $(PDFPACK) $(USER) $(FPEOBJ)
 
 # target to generate LHEF output
 pwhg_main:$(PWHG)
-	$(FF) $(patsubst %,obj/%,$(PWHG)) $(LIBS) $(LIBSFASTJET) $(STATIC) -o $@
+	$(FF) $(patsubst %,$(OBJ)/%,$(PWHG)) $(LIBS) $(LIBSFASTJET) $(STATIC) -o $@
 
 LHEF=lhef_analysis.o boostrot.o random.o cernroutines.o		\
-     opencount.o powheginput.o pwhg_bookhist.o $(PWHGANAL)	\
+     opencount.o powheginput.o $(PWHGANAL)	\
      lhefread.o newunit.o pwhg_analysis_driver.o $(FPEOBJ)
 
 # target to analyze LHEF output
 lhef_analysis:$(LHEF)
-	$(FF) $(patsubst %,obj/%,$(LHEF)) $(LIBS) $(LIBSFASTJET) $(STATIC)  -o $@ 
+	$(FF) $(patsubst %,$(OBJ)/%,$(LHEF)) $(LIBS) $(LIBSFASTJET) $(STATIC)  -o $@ 
 
 
 
 # target to read event file, shower events with HERWIG + analysis
 HERWIG=main-HERWIG.o setup-HERWIG-lhef.o herwig.o boostrot.o	\
-	powheginput.o pwhg_bookhist.o $(PWHGANAL) lhefread.o	\
+	powheginput.o $(PWHGANAL) lhefread.o	\
 	pdfdummies.o opencount.o $(FPEOBJ) 
 
 main-HERWIG-lhef: $(HERWIG)
-	$(FF) $(patsubst %,obj/%,$(HERWIG))  $(LIBSFASTJET)  $(STATIC) -o $@
+	$(FF) $(patsubst %,$(OBJ)/%,$(HERWIG))  $(LIBSFASTJET)  $(STATIC) -o $@
 
 # target to read event file, shower events with PYTHIA + analysis
 PYTHIA=main-PYTHIA.o setup-PYTHIA-lhef.o pythia.o boostrot.o powheginput.o		\
-	pwhg_bookhist.o $(PWHGANAL) lhefread.o newunit.o pdfdummies.o	\
+	$(PWHGANAL) lhefread.o newunit.o pdfdummies.o	\
 	pwhg_analysis_driver.o random.o cernroutines.o opencount.o	\
 	$(FPEOBJ)
 
 main-PYTHIA-lhef: $(PYTHIA)
-	$(FF) $(patsubst %,obj/%,$(PYTHIA)) $(LIBSFASTJET)  $(STATIC) -o $@
+	$(FF) $(patsubst %,$(OBJ)/%,$(PYTHIA)) $(LIBSFASTJET)  $(STATIC) -o $@
 
 # target to cleanup
 .PHONY: clean
 clean:
-	rm -f obj/*.o pwhg_main lhef_analysis main-HERWIG-lhef	\
+	rm -f `echo $(OBJ)/*.o | sed "s!$(OBJ)/pythia.o!! ; s!$(OBJ)/herwig.o!!"` \
+        pwhg_main lhef_analysis main-HERWIG-lhef	\
+	main-PYTHIA-lhef
+
+veryclean:
+	rm -f $(OBJ)/*.o pwhg_main lhef_analysis main-HERWIG-lhef	\
 	main-PYTHIA-lhef
 
