paths adapted in Makefile for VBF_HJJJ
git-svn-id: svn://powhegbox.mib.infn.it/trunk/User-Processes-V2@2705 9e129b38-c2c0-4eec-9301-dc54fda404de

--- a/VBF_HJJJ/Makefile
+++ b/VBF_HJJJ/Makefile
@@ -53,12 +53,11 @@ WDNAME=$(shell basename $(PWD))
 VPATH= ./:../:dhelas:/:$(OBJ)/
 
 INCLUDE0=$(PWD)
-INCLUDE1=$(PWD)/include
 INCLUDE2=$(shell dirname $(PWD))/include
 INCLUDE3=$(PWD)/..
 INCLUDEZ=vbfnlo-files
 
-FF=$(F77) $(FFLAGS) $(FPE) $(OPT) $(DEBUG) -I$(INCLUDE0)  -I$(INCLUDE1) -I$(INCLUDE2) -I$(INCLUDE3) -I $(INCLUDEZ)  
+FF=$(F77) $(FFLAGS) $(FPE) $(OPT) $(DEBUG) -I$(INCLUDE0) -I$(INCLUDE2) -I$(INCLUDE3) -I $(INCLUDEZ) 
 
 INCLUDE =$(wildcard ../include/*.h *.h)
 
