--- a/Wbb_dec/Makefile
+++ b/Wbb_dec/Makefile
@@ -9,8 +9,8 @@ PDF=lhapdf
 ## default analysis may require FASTJET package, that has to be installed separately (see below)
 #ANALYSIS=dummy
 #ANALYSIS=Wbbj
-ANALYSIS=Wbj
-#ANALYSIS=ATLAS-CMS
+#ANALYSIS=Wbj
+ANALYSIS=ATLAS-CMS
 ## For static linking uncomment the following
 #STATIC= -static
 #
