Makefile cleaned up
git-svn-id: svn://powhegbox.mib.infn.it/trunk/User-Processes-V2@2850 9e129b38-c2c0-4eec-9301-dc54fda404de

--- a/dislepton-jet/Makefile
+++ b/dislepton-jet/Makefile
@@ -88,16 +88,14 @@ PWHGANAL+= fastjetfortran.o fastjetsisconewrap.o fastjetktwrap.o
 endif
 
 
-VPATH=./:../Version-pre2-1/progress/:../Version-pre2-1/include/:../Version-pre2-1/:../:./Madlib/:./MODEL/:./DHELAS/:obj/:virtualDY/:
+VPATH=./:../:./Madlib/:./MODEL/:./DHELAS/:obj/:virtualDY/:
 
-HEADERS =$(wildcard ../Version-pre2-1/include/*.h ../include/*.h *.h include/*.h)
+HEADERS =$(wildcard ../include/*.h *.h include/*.h)
 
 INCLUDE0=./
-INCLUDE0.1=../Version-pre2-1/progress/include
-INCLUDE0.2=../Version-pre2-1/include
 INCLUDE2=$(shell dirname $(PWD))/include
 INCLUDE3=./MODEL
-INCLUDES+=-I$(PWD) -I$(INCLUDE0.1)  -I$(INCLUDE0.2) -I$(INCLUDE2) -I$(INCLUDE3)
+INCLUDES+=-I$(PWD) -I$(INCLUDE2) -I$(INCLUDE3)
 
 FF=$(F77) $(FFLAGS) $(FPE) $(OPT) $(DEBUG) $(INCLUDES)
 
